--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -34,6 +34,17 @@
 
     <script defer src="build/bundle.js"></script>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R292PSRN76"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-R292PSRN76");
+  </script>
 
   <body></body>
 </html>
