--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -22,7 +22,7 @@
   </head>
 
   <body data-sveltekit-preload-data="hover" class="bg-body-tertiary">
-    %sveltekit.body%
+    <div style="display: contents">%sveltekit.body%</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
